bugfix: fix typo

--- a/templates/proxychains.conf.j2
+++ b/templates/proxychains.conf.j2
@@ -12,4 +12,4 @@ tcp_read_time_out 15000
 tcp_connect_time_out 8000
 
 [ProxyList]
-sock5 {{ http_proxy.host }} 1080 {{ http_proxy.user }} {{ http_proxy.pass }}
+socks5 {{ http_proxy.host }} 1080 {{ http_proxy.user }} {{ http_proxy.pass }}
